unpackaged/main/default/objects/Opportunity/fields/Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services__c</fullName>
    <label>Additional Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>