unpackaged/main/default/objects/Opportunity/fields/Arthur_Id__c.field-meta.xml
<CustomField>
    <fullName>Arthur_Id__c</fullName>
    <externalId>true</externalId>
    <label>Arthur Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>