unpackaged/main/default/objects/Opportunity/fields/Assigned_CSM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CSM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Assigned CSM)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>