unpackaged/main/default/objects/Opportunity/fields/AssignedCSM__c.field-meta.xml
<CustomField>
    <fullName>AssignedCSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>