unpackaged/main/default/objects/Opportunity/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <inlineHelpText>Please select the Customer Segment suited for the Account based on the Number of Licenses range</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
                <label>SMB(&lt;50)</label>
            </value>
            <value>
                <fullName>SME</fullName>
                <label>SME(50-500)</label>
            </value>
            <value>
                <fullName>SME2</fullName>
                <label>SME2(500-1000)</label>
            </value>
            <value>
                <fullName>MID-CAP</fullName>
                <label>MID-CAP(1000-5000)</label>
            </value>
            <value>
                <fullName>ENT</fullName>
                <label>ENT(5000-10000)</label>
            </value>
            <value>
                <fullName>LARGE-ENT</fullName>
                <label>LARGE-ENT(10000+)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>