unpackaged/main/default/objects/Opportunity/fields/from_converted_lead__c.field-meta.xml
<CustomField>
    <fullName>from_converted_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>from converted lead</label>
    <type>Checkbox</type>
</CustomField>