unpackaged/main/default/objects/Opportunity/fields/Go_Live_Date_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date_Expectation__c</fullName>
    <label>Go Live Date Expectation</label>
    <type>Date</type>
</CustomField>