unpackaged/main/default/objects/Opportunity/fields/Has_Existing_Software_Provided__c.field-meta.xml
<CustomField>
    <fullName>Has_Existing_Software_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Existing Software Provided</label>
    <type>Checkbox</type>
</CustomField>