unpackaged/main/default/objects/Opportunity/fields/Loss_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Details__c</fullName>
    <label>Loss Reason: Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>