unpackaged/main/default/objects/Opportunity/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <description>Non-recurring revenue from one-off and non-repeating charges</description>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>