unpackaged/main/default/objects/Opportunity/fields/Number_of_Quote_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quote_Products__c</fullName>
    <label>Number of Quote Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>