unpackaged/main/default/objects/Opportunity/fields/Number_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quotes__c</fullName>
    <description>Count the number of quotes added</description>
    <label>Number of Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>