unpackaged/main/default/objects/Opportunity/fields/Points_of_Sale_Issues__c.field-meta.xml
<CustomField>
    <fullName>Points_of_Sale_Issues__c</fullName>
    <description>Any areas of concern that the team members are not keen on moving?</description>
    <label>Points of Sale Issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>