unpackaged/main/default/objects/Opportunity/fields/Previous_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_ID__c</fullName>
    <description>Account ID with their previous software provider if any</description>
    <label>Previous Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>