unpackaged/main/default/objects/Opportunity/fields/Previous_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Previous_ARPU__c</fullName>
    <label>Previous ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>