unpackaged/main/default/objects/Opportunity/fields/Previous_MRR__c.field-meta.xml
<CustomField>
    <fullName>Previous_MRR__c</fullName>
    <description>The Previous Monthly Recurring Revenue this people had with their previous software provider</description>
    <label>Previous MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>