unpackaged/main/default/objects/Opportunity/fields/Previous_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Previous_Number_of_Units__c</fullName>
    <description>The number of units they had with their previous software provider</description>
    <label>Previous Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>