unpackaged/main/default/objects/Opportunity/fields/Previous_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Price_Per_Unit__c</fullName>
    <description>The price per unit they had with their previous software provider</description>
    <label>Previous Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>