unpackaged/main/default/objects/Opportunity/fields/Projected_Setup_and_Training_Spend__c.field-meta.xml
<CustomField>
    <fullName>Projected_Setup_and_Training_Spend__c</fullName>
    <label>Projected Professional Services Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>