unpackaged/main/default/objects/Opportunity/fields/Projected_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Projected_Subscription__c</fullName>
    <label>Projected Subscription Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>