unpackaged/main/default/objects/Opportunity/fields/Reasons_for_Signing_Up__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Signing_Up__c</fullName>
    <label>Reasons for Signing Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>