unpackaged/main/default/objects/Opportunity/fields/SAO__c.field-meta.xml
<CustomField>
    <fullName>SAO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Accepted Opportunity</description>
    <inlineHelpText>Sales Accepted Opportunity</inlineHelpText>
    <label>SAO</label>
    <type>Checkbox</type>
</CustomField>