unpackaged/main/default/objects/Opportunity/fields/SAO_Date__c.field-meta.xml
<CustomField>
    <fullName>SAO_Date__c</fullName>
    <label>SAO Date</label>
    <type>Date</type>
</CustomField>