unpackaged/main/default/objects/Opportunity/fields/Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Date__c</fullName>
    <description>Date when they have signed up to Arthur</description>
    <label>Sign Up Date</label>
    <type>Date</type>
</CustomField>