unpackaged/main/default/objects/Opportunity/fields/Sign_Up_Packages__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Packages__c</fullName>
    <label>Sign Up Packages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>