unpackaged/main/default/objects/Opportunity/fields/Urgency_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Clarification__c</fullName>
    <label>Urgency Clarification</label>
    <type>TextArea</type>
</CustomField>