unpackaged/main/default/objects/Opportunity/validationRules/Closed_Won_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Criteria</fullName>
    <active>false</active>
    <description>Ensure that quote and quote products are created before close won.</description>
    <errorConditionFormula>AND(
CreatedDate &gt;=  DATETIMEVALUE(&quot;2022-09-20 12:00:00&quot;),
ISPICKVAL( StageName , &quot;Closed Won&quot;),
OR(
 Number_of_Quotes__c &lt;= 0 ,
 Number_of_Quote_Products__c &lt;= 0 ))</errorConditionFormula>
    <errorMessage>Please create quote and add quote products in order to close won the opportunity.</errorMessage>
</ValidationRule>