unpackaged/main/default/objects/Opportunity/validationRules/Ensure_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Loss_Reason</fullName>
    <active>true</active>
    <description>Requires Loss Reason to be provided when opportunity is closed as lost</description>
    <errorConditionFormula>AND(
CreatedDate &gt;= DATETIMEVALUE(&quot;2022-09-20 12:00:00&quot;),
ISPICKVAL( StageName , &quot;Closed Lost&quot;),
ISBLANK(TEXT( Loss_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please provide the reason for the loss.</errorMessage>
</ValidationRule>